[tool.poetry]
name = "fisheye"
version = "0.1.0"
description = ""
authors = ["hjmr <2620990+hjmr@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "*"
opencv-python = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
